listing authors in gh-pages

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
       <section id="main_content">
         <p>Coop Network Tetris, a university project.</p>
+	<p>Authors:</p>
+	<ul>
+	  <li>Calle Lejdbrandt</li>
+	  <li>Mattias Andrée</li>
+	  <li>Peyman Eshtiagh</li>
+	</ul>
       </section>
 
       <footer>
