--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Cnt by maandree</title>
+    <title>CNT by aiqueneldar+maandree+peys</title>
   </head>
 
   <body>
